Update build workflow (#9)
- Check code formats
- Check code lints
- Report coverage data to codecov.io

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,9 +18,26 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
+
+    - name: Code format check
+      run: cargo fmt --check
+
     - name: Build TQUIC library
       run: cargo build -F ffi --verbose
+
     - name: Build TQUIC examples
       run: cargo build --all --verbose
-    - name: Run tests
+
+    - name: Code lint check
+      run: cargo clippy
+
+    - name: Run unit tests
       run: cargo test --verbose
+
+    - name: Report coverage
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      run: |
+        cargo install cargo-tarpaulin
+        cargo tarpaulin --exclude-files "src/third_party/*" --out Xml
+        bash <(curl -s https://codecov.io/bash) -X gcov -t $CODECOV_TOKEN
