--- a/website/package.json
+++ b/website/package.json
@@ -17,6 +17,7 @@
     "@cmfcmf/docusaurus-search-local": "^1.1.0",
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
+    "@easyops-cn/docusaurus-search-local": "^0.36.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^2.3.2",
