--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/third_party/boringssl"]
-	path = src/third_party/boringssl
+	path = deps/boringssl
 	url = https://github.com/google/boringssl.git
 	ignore = dirty
