--- a/.github/workflows/tquic-interop.yml
+++ b/.github/workflows/tquic-interop.yml
@@ -11,8 +11,17 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        server: [tquic]
+        client: [tquic]
+        include:
+          - server: tquic
+            client: lsquic
+          - server: lsquic
+            client: tquic
 
     steps:
     - uses: actions/checkout@v4
@@ -37,4 +46,4 @@ jobs:
     - name: Run the interop tests 
       run: |
         cd quic-interop-runner   
-        python3 run.py -s tquic -c tquic -t handshake,retry,resumption,http3,ipv6,transfer,multiplexing,longrtt,blackhole,transferloss,transfercorruption,goodput,crosstraffic -d -r tquic=tquic_interop:v1
+        python3 run.py -s ${{ matrix.server }} -c ${{ matrix.client }} -t handshake,retry,resumption,http3,ipv6,transfer,multiplexing,longrtt,blackhole,transferloss,transfercorruption,goodput,crosstraffic -d -r tquic=tquic_interop:v1
