--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,8 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  static_analysis:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,17 +24,47 @@ jobs:
     - name: Code format check
       run: cargo fmt --check
 
+    - name: Code lint check
+      run: cargo clippy --all -- -D warnings
+
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+
+    - name: Update rust
+      run: rustup update
+      
     - name: Build TQUIC library
       run: cargo build -F ffi --verbose
 
     - name: Build TQUIC tools
       run: cargo build --all --verbose
 
-    - name: Code lint check
-      run: cargo clippy --all -- -D warnings
+  unit_testing:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+
+    - name: Update rust
+      run: rustup update
 
     - name: Unit testing
       run: cargo test --verbose
+
+  fuzz_testing:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
 
     - name: Fuzz testing
       run: |
