--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,20 +10,6 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  static_analysis:
-    name: Static analysis
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: 'recursive'
-    - name: Update rust
-      run: rustup update
-    - name: Code format check
-      run: cargo fmt --check
-    - name: Code lint check
-      run: cargo clippy --all -- -D warnings
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -38,6 +24,20 @@ jobs:
     - name: Build TQUIC tools
       run: cargo build --all --verbose
 
+  static_analysis:
+    name: Static analysis
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+    - name: Update rust
+      run: rustup update
+    - name: Code format check
+      run: cargo fmt --check
+    - name: Code lint check
+      run: cargo clippy --all -- -D warnings
+
   unit_testing:
     name: Unit testing
     runs-on: ubuntu-latest
@@ -47,8 +47,18 @@ jobs:
         submodules: 'recursive'
     - name: Update rust
       run: rustup update
+    - name: Install cargo-llvm-cov
+      uses: taiki-e/install-action@cargo-llvm-cov  
     - name: Unit testing
       run: cargo test --verbose
+    - name: Generate code coverage
+      run: cargo llvm-cov --lcov --output-path lcov.info
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: lcov.info
+        fail_ci_if_error: true  
 
   fuzz_testing:
     name: Fuzz testing
