--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,22 +27,21 @@ jobs:
   build_ios:
     name: Build for iOS
     runs-on: macos-latest
-    strategy:
-      matrix:
-        target: ["x86_64-apple-ios"]
+    env:
+      TARGET: "x86_64-apple-ios"
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
       - name: Install rust toolchain
-        run: rustup target add ${{ matrix.target }}
+        run: rustup target add ${{ env.TARGET }}
       - name: Remove cdylib from iOS build
         run: sed -i -e 's/, "cdylib"//g' Cargo.toml
       - name: Run cargo build
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --target=${{ matrix.target }} --verbose
+          args: --target=${{ env.TARGET }} --verbose
 
   build_android:
     name: Build for Android
@@ -50,18 +49,14 @@ jobs:
     env:
       NDK_LTS_VER: "25"
       API_LEVEL: "21"
-    strategy:
-      matrix:
-        target: ["aarch64-linux-android"]
-        include:
-          - target: "aarch64-linux-android"
-            arch: "arm64-v8a"
+      TARGET: "aarch64-linux-android"
+      ARCH: "arm64-v8a"
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
       - name: Install rust toolchain
-        run: rustup target add ${{ matrix.target }}
+        run: rustup target add ${{ env.TARGET }}
       - name: Download Android NDK
         run: |
           curl --http1.1 -O https://dl.google.com/android/repository/android-ndk-r${{ env.NDK_LTS_VER }}-linux.zip
@@ -74,7 +69,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: ndk
-          args: -t ${{ matrix.arch }} -p ${{ env.API_LEVEL }} -- build --verbose --features ffi
+          args: -t ${{ env.ARCH }} -p ${{ env.API_LEVEL }} -- build --verbose --features ffi
         env:
           ANDROID_NDK_HOME: ${{ github.workspace }}/android-ndk-r${{ env.NDK_LTS_VER  }}
 
