--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,8 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-    name: Build
+  build_linux:
+    name: Build for Linux
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -23,6 +23,55 @@ jobs:
       run: cargo build -F ffi --verbose
     - name: Build TQUIC tools
       run: cargo build --all --verbose
+
+  build_ios:
+    name: Build for iOS
+    runs-on: macos-latest
+    env:
+      TARGET: "x86_64-apple-ios"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
+      - name: Install rust toolchain
+        run: rustup target add ${{ env.TARGET }}
+      - name: Remove cdylib from iOS build
+        run: sed -i -e 's/, "cdylib"//g' Cargo.toml
+      - name: Run cargo build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --target=${{ env.TARGET }} --verbose
+
+  build_android:
+    name: Build for Android
+    runs-on: ubuntu-latest
+    env:
+      NDK_LTS_VER: "25"
+      API_LEVEL: "21"
+      TARGET: "aarch64-linux-android"
+      ARCH: "arm64-v8a"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
+      - name: Install rust toolchain
+        run: rustup target add ${{ env.TARGET }}
+      - name: Download Android NDK
+        run: |
+          curl --http1.1 -O https://dl.google.com/android/repository/android-ndk-r${{ env.NDK_LTS_VER }}-linux.zip
+          unzip -q android-ndk-r${{ env.NDK_LTS_VER }}-linux.zip
+      - name: Install cargo-ndk
+        uses: actions-rs/install@v0.1
+        with:
+          crate: cargo-ndk
+      - name: Run cargo ndk
+        uses: actions-rs/cargo@v1
+        with:
+          command: ndk
+          args: -t ${{ env.ARCH }} -p ${{ env.API_LEVEL }} -- build --verbose --features ffi
+        env:
+          ANDROID_NDK_HOME: ${{ github.workspace }}/android-ndk-r${{ env.NDK_LTS_VER  }}
 
   static_analysis:
     name: Static analysis
