Optimize exit condition of tquic_client, exit if 1. consecutive connection failure reaches the threshold at the beginning. 2. gets SIGINT signal.

--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -22,6 +22,7 @@ slab = "0.4"
 rand = "0.8.5"
 statrs = "0.16"
 tikv-jemallocator = "0.5"
+signal-hook = "0.3.17"
 tquic = { path = "..", version = "0.4.0"}
 
 [lib]
