--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -21,7 +21,7 @@ rustc-hash = "1.1"
 slab = "0.4"
 rand = "0.8.5"
 statrs = "0.16"
-tikv-jemallocator = "0.5"
+jemallocator = { version = "0.5", package = "tikv-jemallocator" }
 signal-hook = "0.3.17"
 tquic = { path = "..", version = "0.5.0"}
 
