--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,7 @@ timer_heap = "0.3.0"
 cmake = "0.1"
 
 [lib]
-crate-type = ["lib", "staticlib"]
+crate-type = ["lib", "staticlib", "cdylib"]
 
 [workspace]
 members = ["tools"]
