--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,6 @@ include = [
 # build the FFI API
 ffi = []
 
-# enable sfv
-default = ["sfv"]
-
 [dependencies]
 bytes = "1"
 rustc-hash = "1.1"
@@ -51,7 +48,7 @@ serde_derive = "1.0"
 serde_with = "3.0.0"
 hex = "0.4"
 priority-queue = "1.3.2"
-sfv = { version = "0.9", optional = true }
+sfv = { version = "0.9" }
 
 [dev-dependencies]
 env_logger = "0.10.0"
