--- a/.github/workflows/tquic-goodput.yml
+++ b/.github/workflows/tquic-goodput.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  QUIC_IMAGES: lsquic=tquicgroup/qirls,picoquic=tquicgroup/qirpq,quiche=tquicgroup/qircq
+  QUIC_IMAGES: gquiche=tquicgroup/qirgq,lsquic=tquicgroup/qirls,picoquic=tquicgroup/qirpq,quiche=tquicgroup/qircq
 
 jobs:
   measure:
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        impl: [tquic,lsquic,picoquic,quiche]
+        impl: [tquic,gquiche,lsquic,picoquic,quiche]
         case: [goodput100k,goodput1m,goodput10m]
         cc: [cubic, bbr]
 
