--- a/cbindgen.toml
+++ b/cbindgen.toml
@@ -16,6 +16,7 @@ documentation = true
 
 # A list of headers to #include (with quotes)
 sys_includes = ["sys/socket.h", "sys/types.h"]
+includes = ["openssl/ssl.h"]
 
 [export]
 exclude = ["MAX_CID_LEN", "MIN_CLIENT_INITIAL_LEN"]
