--- a/.github/workflows/tquic-benchmark.yml
+++ b/.github/workflows/tquic-benchmark.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       benchmark_date: ${{ steps.set-benchmark-date.outputs.benchmark_date }}
+      benchmark_impls: ${{ steps.set-implements.outputs.benchmark_impls }}
+      benchmark_rounds: ${{ steps.set-rounds.outputs.benchmark_rounds }}
+      benchmark_duration: ${{ steps.set-duration.outputs.benchmark_duration }}
     steps:
     - name: Set date
       id: set-benchmark-date
@@ -21,6 +24,21 @@ jobs:
         BENCHMARK_DATE=$(date -u +"%Y-%m-%d")
         echo $BENCHMARK_DATE
         echo "benchmark_date=$BENCHMARK_DATE" >> $GITHUB_OUTPUT
+    - name: Set implements
+      id: set-implements
+      run: |
+        IMPLS="lsquic tquic"
+        echo "benchmark_impls=$IMPLS" >> $GITHUB_OUTPUT
+    - name: Set rounds
+      id: set-rounds
+      run: |
+        ROUNDS=5
+        echo "benchmark_rounds=$ROUNDS" >> $GITHUB_OUTPUT
+    - name: Set benchmark duration
+      id: set-duration
+      run: |
+        DURATION=120
+        echo "benchmark_duration=$DURATION" >> $GITHUB_OUTPUT
 
   build_tquic:
     name: Build tquic
@@ -38,7 +56,7 @@ jobs:
         cp target/release/tquic_client tquic_client
     - name: Build start script
       run: |
-        echo $'#!/bin/bash\nchmod u+x ./tquic_server\n./tquic_server --send-udp-payload-size 1350 --log-level OFF --root ./ --disable-stateless-reset -l 0.0.0.0:4433 -c ./cert.crt -k ./cert.key &' > start_tquic.sh
+        echo $'#!/bin/bash\ncd "$(dirname "$0")"\nchmod u+x ./tquic_server\n./tquic_server --send-udp-payload-size 1350 --log-level OFF --root ../files --disable-stateless-reset -l 0.0.0.0:4433 -c ../cert/cert.crt -k ../cert/cert.key &' > start_tquic.sh
         chmod u+x start_tquic.sh
     - name: Upload tquic_server
       uses: actions/upload-artifact@v4
@@ -76,7 +94,7 @@ jobs:
         cp bin/http_server ../lsquic_server
     - name: Build start script
       run: |
-        echo $'#!/bin/bash\nchmod u+x ./lsquic_server\n./lsquic_server -c tquic_benchmark,./cert.crt,./cert.key -s 0.0.0.0:4433 -r ./ -L crit > lsquic.log 2>&1 &' > start_lsquic.sh
+        echo $'#!/bin/bash\ncd "$(dirname "$0")"\nchmod u+x ./lsquic_server\n./lsquic_server -c tquic_benchmark,../cert/cert.crt,../cert/cert.key -s 0.0.0.0:4433 -r ../files -L crit > lsquic.log 2>&1 &' > start_lsquic.sh
         chmod u+x start_lsquic.sh
     - name: Upload lsquic server
       uses: actions/upload-artifact@v4
@@ -122,46 +140,32 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        server: [ tquic, lsquic ]
         file: [ 15K, 50K, 2M ]
         conn: [ 10 ]
         stream: [ 1, 10 ]
     steps:
-    - name: Download ${{ matrix.server }} server
+    - name: Download all
       uses: actions/download-artifact@v4
-      with:
-        name: ${{ matrix.server }}_server_bin
-    - name: Download cert
-      uses: actions/download-artifact@v4
-      with:
-        name: cert
-    - name: Download files
-      uses: actions/download-artifact@v4
-      with:
-        name: files
-    - name: Download tquic_client
-      uses: actions/download-artifact@v4
-      with:
-        name: tquic_client_bin
     - name: Display structure of downloaded files
       run: ls -R
-    - name: Start ${{ matrix.server }} server
+    - name: Benchmark
       run: |
-        sh start_${{ matrix.server }}.sh
-        pgrep ${{ matrix.server }}_server
-    - name: Benchmark ${{ matrix.server }}
-      run: |
-        chmod u+x ./tquic_client
-        ./tquic_client https://tquic_benchmark:4433/file_${{ matrix.file }} --connect-to 127.0.0.1:4433 --threads ${{ matrix.conn }} --max-concurrent-conns 1 --max-concurrent-requests ${{ matrix.stream }} --max-requests-per-conn 0 --total-requests-per-thread 0 -d 600 --disable-stateless-reset --send-batch-size 1 --recv-udp-payload-size 1350 --send-udp-payload-size 1350 --log-level OFF > client.log 2>&1
-        cat client.log | grep "finished in" | awk '{print $4}' > benchmark_long_${{ matrix.server }}_${{ matrix.file }}_${{ matrix.conn }}_${{ matrix.stream }}.${{ needs.config.outputs.benchmark_date }}
-    - name: Stop ${{ matrix.server }} server
-      run: |
-        killall ${{ matrix.server }}_server
-        sleep 1
+        chmod u+x ./tquic_client_bin/tquic_client
+        for((round=0;round<${{ needs.config.outputs.benchmark_rounds }};round++));do
+          for impl in ${{ needs.config.outputs.benchmark_impls }};do
+            sh ${impl}_server_bin/start_${impl}.sh
+            pgrep ${impl}_server
+            sleep 1
+            ./tquic_client_bin/tquic_client https://tquic_benchmark:4433/file_${{ matrix.file }} --connect-to 127.0.0.1:4433 --threads ${{ matrix.conn }} --max-concurrent-conns 1 --max-concurrent-requests ${{ matrix.stream }} --max-requests-per-conn 0 --total-requests-per-thread 0 -d ${{ needs.config.outputs.benchmark_duration }} --disable-stateless-reset --send-batch-size 1 --recv-udp-payload-size 1350 --send-udp-payload-size 1350 --log-level OFF > client.log 2>&1
+            cat client.log | grep "finished in" | awk '{print $4}' > benchmark_long_${impl}_${{ matrix.file }}_${{ matrix.conn }}_${{ matrix.stream }}.${round}.${{ needs.config.outputs.benchmark_date }}
+            killall ${impl}_server
+            sleep 1
+          done
+        done
     - name: Upload benchmark result
       uses: actions/upload-artifact@v4
       with:
-        name: benchmark_long_${{ matrix.server }}_${{ matrix.file }}_${{ matrix.conn }}_${{ matrix.stream }}.${{ needs.config.outputs.benchmark_date }}
+        name: benchmark_long_${{ matrix.file }}_${{ matrix.conn }}_${{ matrix.stream }}.${{ needs.config.outputs.benchmark_date }}
         path: benchmark_long_*
         retention-days: 90
 
@@ -169,45 +173,29 @@ jobs:
     name: Run short connection scenario benchmark
     needs: [ config, build_tquic, build_lsquic, gen_cert, gen_files ]
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        server: [ tquic, lsquic ]
     steps:
-    - name: Download ${{ matrix.server }} server
+    - name: Download all
       uses: actions/download-artifact@v4
-      with:
-        name: ${{ matrix.server }}_server_bin
-    - name: Download cert
-      uses: actions/download-artifact@v4
-      with:
-        name: cert
-    - name: Download files
-      uses: actions/download-artifact@v4
-      with:
-        name: files
-    - name: Download tquic_client
-      uses: actions/download-artifact@v4
-      with:
-        name: tquic_client_bin
     - name: Display structure of downloaded files
       run: ls -R
-    - name: Start ${{ matrix.server }} server
+    - name: Benchmark
       run: |
-        sh start_${{ matrix.server }}.sh
-        pgrep ${{ matrix.server }}_server
-    - name: Benchmark ${{ matrix.server }}
-      run: |
-        chmod u+x ./tquic_client
-        ./tquic_client https://tquic_benchmark:4433/file_1K --connect-to 127.0.0.1:4433 --threads 10 --max-concurrent-conns 1 --max-concurrent-requests 1 --max-requests-per-conn 1 --total-requests-per-thread 0 -d 600 --disable-stateless-reset --send-batch-size 1 --recv-udp-payload-size 1350 --send-udp-payload-size 1350 --log-level OFF > client.log 2>&1
-        cat client.log | grep "finished in" | awk '{print $4}' > benchmark_short_${{ matrix.server }}_1K_10_1.${{ needs.config.outputs.benchmark_date }}
-    - name: Stop ${{ matrix.server }} server
-      run: |
-        killall ${{ matrix.server }}_server
-        sleep 1
+        chmod u+x ./tquic_client_bin/tquic_client
+        for((round=0;round<${{ needs.config.outputs.benchmark_rounds }};round++));do
+          for impl in ${{ needs.config.outputs.benchmark_impls }};do
+            sh ${impl}_server_bin/start_${impl}.sh
+            pgrep ${impl}_server
+            sleep 1
+            ./tquic_client_bin/tquic_client https://tquic_benchmark:4433/file_1K --connect-to 127.0.0.1:4433 --threads 10 --max-concurrent-conns 1 --max-concurrent-requests 1 --max-requests-per-conn 1 --total-requests-per-thread 0 -d ${{ needs.config.outputs.benchmark_duration }} --disable-stateless-reset --send-batch-size 1 --recv-udp-payload-size 1350 --send-udp-payload-size 1350 --log-level OFF > client.log 2>&1
+            cat client.log | grep "finished in" | awk '{print $4}' > benchmark_short_${impl}_1K_10_1.${round}.${{ needs.config.outputs.benchmark_date }}
+            killall ${impl}_server
+            sleep 1
+          done
+        done
     - name: Upload benchmark result
       uses: actions/upload-artifact@v4
       with:
-        name: benchmark_short_${{ matrix.server }}_1K_10_1.${{ needs.config.outputs.benchmark_date }}
+        name: benchmark_short_1K_10_1.${{ needs.config.outputs.benchmark_date }}
         path: benchmark_short_*
         retention-days: 90
 
