--- a/cbindgen.toml
+++ b/cbindgen.toml
@@ -16,10 +16,10 @@ documentation = true
 
 # A list of headers to #include (with quotes)
 sys_includes = ["sys/socket.h", "sys/types.h"]
-includes = ["openssl/ssl.h"]
+includes = ["openssl/ssl.h", "tquic_def.h"]
 
 [export]
-exclude = ["MAX_CID_LEN", "MIN_CLIENT_INITIAL_LEN"]
+exclude = ["MAX_CID_LEN", "MIN_CLIENT_INITIAL_LEN", "VINT_MAX"]
 
 [export.rename]
 "Config" = "quic_config_t"
@@ -42,6 +42,7 @@ exclude = ["MAX_CID_LEN", "MIN_CLIENT_INITIAL_LEN"]
 "TlsConfigSelectMethods" = "quic_tls_config_select_methods_t"
 "TlsConfigSelectorContext" = "quic_tls_config_select_context_t"
 "CongestionControlAlgorithm" = "quic_congestion_control_algorithm"
+"MultipathAlgorithm" = "quic_multipath_algorithm"
 "LevelFilter" = "quic_log_level"
 "Http3Connection" = "http3_conn_t"
 "Http3Config" = "http3_config_t"
