--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,9 @@ hex = "0.4"
 priority-queue = "1.3.2"
 sfv = { version = "0.9" }
 
+[target."cfg(windows)".dependencies]
+winapi = { version = "0.3", features = ["wincrypt", "ws2def", "ws2ipdef", "ws2tcpip"] }
+
 [dev-dependencies]
 env_logger = "0.10.0"
 mio = { version = "0.8", features = ["net", "os-poll"] }
