Rename PathStats to quic_path_stats_t in FFI

--- a/cbindgen.toml
+++ b/cbindgen.toml
@@ -31,6 +31,7 @@ exclude = ["MIN_CLIENT_INITIAL_LEN", "VINT_MAX"]
 "PacketOutSpec" = "quic_packet_out_spec_t"
 "PacketInfo" = "quic_packet_info_t"
 "PathAddress" = "quic_path_address_t"
+"PathStats" = "quic_path_stats_t"
 "FourTupleIter" = "quic_path_address_iter_t"
 "Shutdown" = "quic_shutdown"
 "TransportHandler" = "quic_transport_handler_t"
