--- a/.github/workflows/tquic-benchmark.yml
+++ b/.github/workflows/tquic-benchmark.yml
@@ -17,6 +17,7 @@ jobs:
       benchmark_impls: ${{ steps.set-implements.outputs.benchmark_impls }}
       benchmark_rounds: ${{ steps.set-rounds.outputs.benchmark_rounds }}
       benchmark_duration: ${{ steps.set-duration.outputs.benchmark_duration }}
+    if: ${{ ( github.event_name == 'schedule' && github.repository == 'tencent/tquic' ) || github.event_name == 'workflow_dispatch' }}
     steps:
     - name: Set date
       id: set-benchmark-date
@@ -43,6 +44,7 @@ jobs:
   build_tquic:
     name: Build tquic
     runs-on: ubuntu-latest
+    needs: config
     steps:
     - uses: actions/checkout@v4
       with:
@@ -74,6 +76,7 @@ jobs:
   build_lsquic:
     name: Build lsquic
     runs-on: ubuntu-latest
+    needs: config
     steps:
     - uses: actions/checkout@v4
       with:
@@ -107,6 +110,7 @@ jobs:
   gen_cert:
     name: Generate cert
     runs-on: ubuntu-latest
+    needs: config
     steps:
     - name: Generate cert
       run: |
@@ -121,6 +125,7 @@ jobs:
   gen_files:
     name: Generate files
     runs-on: ubuntu-latest
+    needs: config
     steps:
     - name: Generate files
       run: |
