Add integration tests for disable_1rtt_encryption extension

--- a/.github/workflows/tquic-integration.yml
+++ b/.github/workflows/tquic-integration.yml
@@ -23,4 +23,8 @@ jobs:
       run: |
         cd tools/tests/
         bash ./tquic_tools_test.sh -b ../../target/release/ -t multipath_redundant,multipath_minrtt,multipath_roundrobin -f 1000M -p 5
+    - name: Run integration tests for disable_1rtt_encryption
+      run: |
+        cd tools/tests/
+        bash ./tquic_tools_test.sh -b ../../target/debug/ -t multipath_roundrobin -c '~~disable-encryption' -s '~~disable-encryption'
 
