--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -132,20 +132,20 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
-      - name: Install rust toolchain
-        run: rustup target add ${{ env.TARGET }}
-      - name: Download OHOS NDK
-        run: |
-          wget https://repo.huaweicloud.com/openharmony/os/4.0-Release/ohos-sdk-windows_linux-public.tar.gz
-          tar -xvzf ohos-sdk-windows_linux-public.tar.gz
-          cd ohos-sdk/linux/
-          unzip -q native-linux-x64-4.0.10.13-Release.zip
+
+      - name: Setup OpenHarmony SDK
+        uses: openharmony-rs/setup-ohos-sdk@v0.1.3
+        with:
+          version: '4.1'
+
+      - name: Setup Rust environment
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          target: 'aarch64-unknown-linux-ohos,armv7-unknown-linux-ohos,x86_64-unknown-linux-ohos'
+
       - name: Run cargo build
-        run: |
-          OHOS_NDK_HOME=${{ github.workspace }}/ohos-sdk/linux/ \
-          CC_aarch64_unknown_linux_ohos=${OHOS_NDK_HOME}/native/llvm/bin/clang \
-          AR_aarch64_unknown_linux_ohos=${OHOS_NDK_HOME}/native/llvm/bin/llvm-ar \
-          cargo build --target ${{ env.TARGET }} --verbose --features ffi --release
+        run: cargo install ohrs && ohrs build -- --verbose --features ffi --release
 
   static_analysis:
     name: Static analysis
