--- a/.github/workflows/tquic-integration.yml
+++ b/.github/workflows/tquic-integration.yml
@@ -26,5 +26,5 @@ jobs:
     - name: Run integration tests for disable_1rtt_encryption
       run: |
         cd tools/tests/
-        bash ./tquic_tools_test.sh -b ../../target/debug/ -t multipath_roundrobin -c '~~disable-encryption' -s '~~disable-encryption'
+        bash ./tquic_tools_test.sh -b ../../target/release/ -t multipath_roundrobin -c '~~disable-encryption' -s '~~disable-encryption'
 
